2009-11-29  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/x86_64/pentium4/gmp-mparam.h
	(HAVE_NATIVE_mpn_addlsh1_n, HAVE_NATIVE_mpn_sublsh1_n): Don't undef.

	* Makefile.am (EXTRA_DIST): Remove macos.

2009-11-28  Torbjorn Granlund  <tege@gmplib.org>

	* tune/tuneup.c (tune_redc): Set min_size to 16 for redc_n tuning.

	* mpn/x86_64/sqr_basecase.asm (SQR_TOOM2_THRESHOLD_MAX): Avoid quoting
	to allow configure.in parse it more easily.  Trim from 120 to 80.

2009-11-28  Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mpn/generic/mulmod_bnm1.c: Basecases made simpler,
	  this also corrects a bug affecting previous version.

2009-11-28  Torbjorn Granlund  <tege@gmplib.org>

	* configure.in: Handle atom also in 32-bit mode.
	* mpn/x86/atom/gmp-mparam.h: New file.

	* gmp-impl.h (MULMOD_BNM1_THRESHOLD): Default.

	* mpn/generic/redc_n.c: Use mpn_mulmod_bnm1 instead of mpn_mul_n.

	* Use TMP_ALLOC_LIMBS consistently.
	* Finish renaming BITS_PER_MP_LIMB to GMP_LIMB_BITS.

	* macos: Remove entire directory.

2009-11-27  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/x86_64/corei/gmp-mparam.h: New file.
	* mpn/x86_64/core2/gmp-mparam.h: Now for just core2.
	* mpn/powerpc64/mode64/p3/gmp-mparam.h: New file.
	* mpn/powerpc64/mode64/p4/gmp-mparam.h: New file.
	* mpn/powerpc64/mode64/p5/gmp-mparam.h: New file.

	* config.guess: Return "corei" for core i7 and core i5.
	* config.sub: Recognise "corei".
	* acinclude.m4 (X86_64_PATTERN): Add corei.
	* configure.in (powerpc): Set up more CPU-specific paths.
	(x86): Handle corei.

	* mpz/powm.c: Allow input operand overlap also when exponent = 1.
	Misc cleanups.

2009-11-26  Marco Bodrato <bodrato@mail.dm.unipi.it>

	* tests/mpn/t-mulmod_bnm1.c: New test file.

	* mpn/generic/mullow_n.c: Comments on Mulders' trick implementation.

2009-11-26  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/generic/powm.c: Make comments reflect current code state.

	* tests/devel/try.c: Make mpn_mullow_n testing actually work.
